--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -2,5 +2,8 @@
 
 {% block content %}
     <h1>index 페이지입니다.</h1>
+    {% for article in articles %}
+    <p>{{ article }}</p>
+    {% endfor %}
 {% endblock content %}
 
