--- a/articles/templates/articles/create.html
+++ b/articles/templates/articles/create.html
@@ -6,4 +6,5 @@
     {{ form.as_p }}
     <input type="submit">
     </form>
+    <a href="{% url 'articles:index'%}">index로 이동</a>
 {% endblock content %}
