--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -10,5 +10,7 @@
 {% csrf_token %}
 <button class="btn btn-danger">DELETE</button>
 </form>
+
 <a class="btn btn-primary" href="{% url 'articles:index' %}">index</a>
+<a class="btn btn-info" href="{% url 'articles:update' article.pk %}">update</a>
 {% endblock content %}
