--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
     <h1>index 페이지입니다.</h1>
+    <img src="{% static 'articles/images/photo.jpg' %}">
     {% for article in articles %}
     <p><a href="{% url 'articles:detail' article.pk %}">{{ article }}</a></p>
     {% endfor %}
