--- a/crud/templates/nav.html
+++ b/crud/templates/nav.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    {% if request.user.is_authenticated %}
+    <a class="navbar-brand" href="#">{{ user.username }}</a>
+    {% else %}
+      <a class="navbar-brand" href="#">로그인전</a>
+    {% endif %}
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +17,7 @@
           <a class="nav-link" href="{% url 'articles:create' %}">create</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
+          <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
         </li>
       </ul>
     </div>
