--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -4,7 +4,11 @@
     <h1>index 페이지입니다.</h1>
     <img src="{% static 'articles/images/photo.jpg' %}">
     {% for article in articles %}
-    <p><a href="{% url 'articles:detail' article.pk %}">{{ article }}</a></p>
+        {% if user.is_authenticated %}
+            <p><a href="{% url 'articles:detail' article.pk %}">{{ article }}</a></p>
+        {% else %}
+            <p>{{ article }}</p>
+        {% endif %}
     {% endfor %}
 {% endblock content %}
 
