--- a/crud/templates/nav.html
+++ b/crud/templates/nav.html
@@ -10,15 +10,22 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{% url 'articles:index' %}">index</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'articles:create' %}">create</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
-        </li>
+        {% if request.user.is_authenticated %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:logout' %}">logout</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'articles:index' %}">index</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'articles:create' %}">create</a>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
+          </li>
+        {% endif %}
+
       </ul>
     </div>
   </div>
