--- a/crud/templates/nav.html
+++ b/crud/templates/nav.html
@@ -20,6 +20,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'articles:create' %}">create</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:update' %}">회원 정보 수정</a>
+          </li>
           <form action="{% url 'accounts:delete' %}" method="POST">
           {% csrf_token %}
           <input type="submit" value="회원 탈퇴">
@@ -29,7 +32,7 @@
             <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
           </li>
         {% endif %}
-        
+
       </ul>
     </div>
   </div>
