--- a/crud/templates/nav.html
+++ b/crud/templates/nav.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'accounts:login' %}">login</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:signup' %}">회원 생성</a>
+          </li>
         {% endif %}
 
       </ul>
