--- a/articles/templates/articles/create.html
+++ b/articles/templates/articles/create.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>회원 가입</h1>
+<h1>게시글 작성</h1>
     <form action="" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="회원 가입">
+    <input type="submit" value="제출">
     </form>
     <a href="{% url 'articles:index'%}">index로 이동</a>
 {% endblock content %}
