--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -17,5 +17,20 @@
 <a class="btn btn-info" href="{% url 'articles:update' article.pk %}">update</a>
 {% endif %}
 <a class="btn btn-primary" href="{% url 'articles:index' %}">index</a>
+<hr>
+
+  <p><b>댓글 작성</b></p>
+  {% if user.is_authenticated %}
+    <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
+        {% csrf_token %}
+        {{ comment_form }}
+        <input type="submit" value="댓글 작성" class="btn btn-dark">
+    </form>
+  {% else %}
+    <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인 해주세요.]</a>
+  {% endif %}
+    <hr>
+
+
 
 {% endblock content %}
