--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -30,7 +30,9 @@
     <a href="{% url 'accounts:login' %}">[댓글을 작성하려면 로그인 해주세요.]</a>
   {% endif %}
     <hr>
-
+    {% for comment in comments %}
+    <p>{{comment}}</p>
+    {% endfor %}
 
 
 {% endblock content %}
