--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -18,7 +18,17 @@
 {% endif %}
 <a class="btn btn-primary" href="{% url 'articles:index' %}">index</a>
 <hr>
+    <form action="{% url 'articles:likes' article.pk %}" method="POST">
+    {% csrf_token %}
+    {% if request.user in article.like_users.all %}
+        <button>좋아요 취소</button>
+    {% else %}
+        <button>좋아요</button>
+    {% endif %}
+    </form>
 
+
+<hr>
   <p><b>댓글 작성</b></p>
   {% if user.is_authenticated %}
     <form action="{% url 'articles:comments_create' article.pk %}" method="POST">
