--- a/crud/templates/nav.html
+++ b/crud/templates/nav.html
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'accounts:update' %}">회원 정보 수정</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:profile' user.username %}">프로필</a>
+          </li>
           <form action="{% url 'accounts:delete' %}" method="POST">
           {% csrf_token %}
           <input type="submit" value="회원 탈퇴">
