--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -18,12 +18,16 @@
 {% endif %}
 <a class="btn btn-primary" href="{% url 'articles:index' %}">index</a>
 <hr>
-    <form action="{% url 'articles:likes' article.pk %}" method="POST">
+    <form action="{% url 'articles:like' article.pk %}" method="POST">
     {% csrf_token %}
     {% if request.user in article.like_users.all %}
-        <button>좋아요 취소</button>
+        <button class="btn btn-link">
+            <i class="fas fa-heart fa-lg" style="color:crimson;"></i>
+        </button>
     {% else %}
-        <button>좋아요</button>
+        <button class="btn btn-link">
+            <i class="fas fa-heart fa-lg" style="color:black;"></i>
+        </button>
     {% endif %}
     </form>
 
