--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -5,8 +5,63 @@
     <img src="{% static 'articles/images/photo.jpg' %}">
     {% for article in articles %}
         {% if user.is_authenticated %}
-            <p><a href="{% url 'articles:detail' article.pk %}">{{ article }}</a> 작성자: <a href="{% url 'accounts:profile' article.user%}">{{ article.user }}</a> </p>
+            <p>
+                <a href="{% url 'articles:detail' article.pk %}">{{ article }}</a> 
+                작성자: 
+                <a href="{% url 'accounts:profile' article.user%}">{{ article.user }}</a>
+                <form action="" class="d-inline like-form" data-id="{{ article.pk }}">
+                    {% csrf_token %}
+                    {% if user in article.like_users.all %}
+                        <button class="btn btn-link">
+                        <i id="like-{{ article.pk }}" class="fas fa-heart fa-lg" style="color:crimson;"></i>
+                        </button>
+                    {% else %}
+                        <button class="btn btn-link">
+                        <i id="like-{{ article.pk }}" class="fas fa-heart fa-lg" style="color:black;"></i>
+                        </button>
+                    {% endif %}
+                </form>
+            </p>
         {% endif %}
+        <p>
+            <span id="like-count-{{ article.pk }}">
+            {{ article.like_users.all|length }}
+            </span> 명이 이 글을 좋아합니다.
+        </p>
     {% endfor %}
+                
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+        const forms = document.querySelectorAll('.like-form')
+        forms.forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+            event.preventDefault()
+            const articleId = event.target.dataset.id
+            const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
+
+            axios.post(`http://127.0.0.1:8000/articles/${articleId}/like/`, {}, {
+                headers: {'X-CSRFToken': csrftoken}
+            })
+            .then(function (response) {
+                const count = response.data.count
+                const liked = response.data.liked
+
+                const likeIconColor = document.querySelector(`#like-${articleId}`)
+                const likeCount = document.querySelector(`#like-count-${articleId}`)
+                if (liked) {
+                    likeIconColor.style.color = 'crimson'
+                } else {
+                    likeIconColor.style.color = 'black'
+                }
+
+                likeCount.innerText = count
+
+            })
+          })
+        })
+
+
+    </script>
 {% endblock content %}
 
